[package]
name = "short-url-store"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.1.3"
tokio = { version = "1.6.1", features = ["macros", "rt", "rt-multi-thread", "net"] }
tracing = "0.1"
tracing-subscriber = "0.2"
http = "0.2"
lazy_static = "1.4.0"
base62num = "0.1.1"

[dependencies.redis]
version = "*"

[dev-dependencies.tower]
version = "0.4"
features = [
    "util",
    "timeout",
    "limit",
    "load-shed",
    "steer",
    "filter",
]

[dev-dependencies.tower-http]
version = "0.1"
features = ["full"]

[dev-dependencies.hyper]
version = "0.14"
features =  ["server", "tcp", "http1", "stream"]